CRUD en vistas de reservaciones
Se completa este CRUD asi como ajustes en empleado y el CRUD completo de Ocupaciones

--- a/src/View/ListarocupacionesView.form
+++ b/src/View/ListarocupacionesView.form
@@ -72,7 +72,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="TablaMostrarOcupacion">
+            <Component class="javax.swing.JTable" name="jTable1">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
